--- a/PaginaMedidor/css/style.css
+++ b/PaginaMedidor/css/style.css
@@ -15,6 +15,10 @@ background-color: #0e771f;
   margin-top: 0;
   }
   
+  #colorcito{
+
+    color: aliceblue;
+  }
 
 nav ul a,
 nav .brand-logo {
