--- a/PaginaMedidor/css/style.css
+++ b/PaginaMedidor/css/style.css
@@ -6,6 +6,9 @@
  * Made By MaterializeCSS.com
  */
 
+ 
+
+
  .navcolor{
 background-color: #0e771f;
 
@@ -85,4 +88,19 @@ h3.quienesomos{
 
 ul.listacirculo {
   list-style-type: square;
+}
+
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+.embed-container iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
